unpackaged/main/default/objects/Discount__c/Discount__c.object-meta.xml
<CustomObject>
    <description>Invoice (Sales Document) Line Items that reduce the amount of revenue Verto receives.</description>
    <label>Discount</label>
    <nameField>
        <label>Discount Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Discounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>