unpackaged/main/default/objects/Discount__c/fields/Discount_Type__c.field-meta.xml
<CustomField>
    <fullName>Discount_Type__c</fullName>
    <label>Discount Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CTW</fullName>
            </value>
            <value>
                <fullName>ILA</fullName>
            </value>
            <value>
                <fullName>Opportunity Grant</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Merit Award</fullName>
            </value>
            <value>
                <fullName>Early Enrollment Discount</fullName>
            </value>
            <value>
                <fullName>Prior Pricing Discount</fullName>
            </value>
            <value>
                <fullName>Promise Grant 1</fullName>
            </value>
            <value>
                <fullName>Promise Grant 2</fullName>
            </value>
            <value>
                <fullName>USF Scholarship</fullName>
            </value>
            <value>
                <fullName>Scholarship</fullName>
                <isActive>false</isActive>
                <label>Scholarship</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>