unpackaged/main/default/objects/Discount__c/fields/Opportunity_Grant_App_Received__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Grant_App_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opportunity Grant App Received</label>
    <type>Checkbox</type>
</CustomField>