unpackaged/main/default/objects/Discount__c/fields/Sales_Document__c.field-meta.xml
<CustomField>
    <fullName>Sales_Document__c</fullName>
    <label>Sales Document</label>
    <referenceTo>bt_stripe__Sales_Document__c</referenceTo>
    <relationshipLabel>Discounts</relationshipLabel>
    <relationshipName>Discounts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>