unpackaged/main/default/objects/Discount__c/fields/UNH_PowerFAIDS_Codes__c.field-meta.xml
<CustomField>
    <fullName>UNH_PowerFAIDS_Codes__c</fullName>
    <formula>CASE(Discount_Type__c, &#39;Opportunity Grant&#39;, &#39;VeOppGrant&#39;, &#39;ILA&#39;, &#39;VeIntlLead&#39;, &#39;Early Enrollment Discount&#39;, &#39;VeEEDisc&#39;, &#39;Promise Grant 1&#39;, &#39;VePromise1&#39;, &#39;Promise Grant 2&#39;, &#39;VePromise2&#39;, &#39;Prior Pricing Discount&#39;, &#39;VePPDisc&#39;, &#39;N/A&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UNH PowerFAIDS Codes</label>
    <type>Text</type>
</CustomField>