unpackaged/main/default/objects/Discount__c/listViews/Opportunity_Grants.listView-meta.xml
<ListView>
    <fullName>Opportunity_Grants</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Amount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Discount_Type__c</field>
        <operation>equals</operation>
        <value>Opportunity Grant</value>
    </filters>
    <label>Opportunity Grants</label>
</ListView>